rnsc/test_data/rns_integration/error/parser/inner_classes_attr_directive/unexpected_token_in_body_recovers.rns
; Tests that parser continues after unexpected token and reports subsequent errors
; Expected errors: E-037 (unexpected token), E-007 (unknown token after end)

.class public MyClass
.super java/lang/Object

.inner_classes_attr

     unknown_token ; <- E-037
.inner_classes_attr_end

     unknown_token_after_end ; <- E-007 after inner_classes_attr_end

.class_end
